# docstring2json

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/rules/: custom-rule.mdc  project-structure.mdc
.github/workflows/: ci.yml  upload_to_pypi.yml
google_docstring_2md/: __init__.py  __main__.py  config.py  converter.py  docstring_processor.py  document_tree.py  github_linker.py  reference_parser.py  signature_formatter.py  utils.py
src/: __init__.py  __main__.py
src/docstring2json/: __init__.py  __main__.py  cli.py  converter.py
src/docstring2json/utils/: __init__.py
src/docstring2tsx/: __main__.py  cli.py
src/docstring2tsx/utils/: importer.py  signature_formatter.py
src/docstring_2md/: __init__.py  __main__.py  converter.py  document_tree.py  processor.py
src/docstring_2tsx/: __init__.py  __main__.py  cli.py  components.py  converter.py  processor.py
src/docstring_2tsx/templates/: README.md
src/docstring_2tsx/templates/components/: ModuleDoc.tsx.example
src/docstring_2tsx/utils/: __init__.py  importer.py  processor.py  shared.py  signature_formatter.py
src/utils/: __init__.py  github_linker.py  processor.py  reference_parser.py  shared.py  signature_formatter.py
tests/: __init__.py  test_converter.py  test_docusaurus_links.py  test_file_to_json.py  test_file_to_tsx.py  test_function_markdown.py  test_generate_markdown.py  test_git_utils.py  test_github_config.py  test_index_generation.py  test_mdx_compatibility.py  test_reference_parser.py  test_signature_formatter.py  test_tsx_converter.py  test_utils.py
